--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>404 | Joshua's Web Hosting</title>
+	<title>404 | Joshua Loves Code</title>
 	<!-- Bootstrap CSS -->
 	<link href="http://sosada.apesweb.net/css/bootstrap.css" rel="stylesheet">
 	<!-- Fontawesome -->
@@ -23,7 +23,7 @@
 	<div class="wrapper">
 		<!-- HEADER -->
 		<header class="container" id="header">
-			<img src="http://sosada.apesweb.net/img/logo.png" alt="logo" class="logo"> <a href="#">Joshua's Web Hosting</a>
+			<img src="http://sosada.apesweb.net/img/logo.png" alt="logo" class="logo"> <a href="#">Joshua Loves Code</a>
 		</header>
 		<!-- END HEADER -->
 
@@ -78,8 +78,8 @@
 	<!-- END FOOTER -->
 
 	<!-- jQuery js -->
-	<script src="http://sosada.apesweb.net/js/jquery.min.js"></script>
+	<script src="https://sosada.apesweb.net/js/jquery.min.js"></script>
 	<!-- bootstrap js -->
-	<script src="http://sosada.apesweb.net/js/bootstrap.min.js"></script>
+	<script src="https://sosada.apesweb.net/js/bootstrap.min.js"></script>
 </body>
 </html>
