--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Joshua's First Website!</title>
+  <title>Home | Joshua Loves Code</title>
  </head>
  <body>
-   <h1>Hello World!!!!!!</h1>
+   <h1>Coming Soon :)</h1>
  </body>
  </html>
