--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 	<!-- END FOOTER -->
 
 	<!-- jQuery js -->
-	<script src="http://sosada.apesweb.net/js/jquery.min.js"></script>
+	<script src="https://sosada.apesweb.net/js/jquery.min.js"></script>
 	<!-- bootstrap js -->
-	<script src="http://sosada.apesweb.net/js/bootstrap.min.js"></script>
+	<script src="https://sosada.apesweb.net/js/bootstrap.min.js"></script>
 </body>
 </html>
