--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Home | Joshua's Web Hosting</title>
 	<!-- Bootstrap CSS -->
-	<link href="http://sosada.apesweb.net/css/bootstrap.css" rel="stylesheet">
+	<link href="https://sosada.apesweb.net/css/bootstrap.css" rel="stylesheet">
 	<!-- Fontawesome -->
 	<link href="http://sosada.apesweb.net/css/font-awesome.css" rel="stylesheet">
 	<!-- Style CSS -->
-	<link href="http://sosada.apesweb.net/style.css" rel="stylesheet">
+	<link href="https://sosada.apesweb.net/style.css" rel="stylesheet">
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700|Poppins:100,300,700" rel="stylesheet" type="text/css">
 	<!--[if lt IE 9]>
