--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Bootstrap CSS -->
 	<link href="https://sosada.apesweb.net/css/bootstrap.css" rel="stylesheet">
 	<!-- Fontawesome -->
-	<link href="http://sosada.apesweb.net/css/font-awesome.css" rel="stylesheet">
+	<link href="https://sosada.apesweb.net/css/font-awesome.css" rel="stylesheet">
 	<!-- Style CSS -->
 	<link href="https://sosada.apesweb.net/style.css" rel="stylesheet">
 	<!-- Fonts -->
