--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Home | Joshua's Web Hosting</title>
 	<!-- Bootstrap CSS -->
-	<link href="https://sosada.apesweb.net/css/bootstrap.css" rel="stylesheet">
+	<link href="http://sosada.apesweb.net/css/bootstrap.css" rel="stylesheet">
 	<!-- Fontawesome -->
-	<link href="https://sosada.apesweb.net/css/font-awesome.css" rel="stylesheet">
+	<link href="http://sosada.apesweb.net/css/font-awesome.css" rel="stylesheet">
 	<!-- Style CSS -->
-	<link href="https://sosada.apesweb.net/style.css" rel="stylesheet">
+	<link href="http://sosada.apesweb.net/style.css" rel="stylesheet">
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700|Poppins:100,300,700" rel="stylesheet" type="text/css">
 	<!--[if lt IE 9]>
@@ -58,8 +58,8 @@
 	<!-- END FOOTER -->
 
 	<!-- jQuery js -->
-	<script src="https://sosada.apesweb.net/js/jquery.min.js"></script>
+	<script src="http://sosada.apesweb.net/js/jquery.min.js"></script>
 	<!-- bootstrap js -->
-	<script src="https://sosada.apesweb.net/js/bootstrap.min.js"></script>
+	<script src="http://sosada.apesweb.net/js/bootstrap.min.js"></script>
 </body>
 </html>
