--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Home | Joshua's Web Hosting</title>
+	<title>Home | Joshua Loves Code</title>
 	<!-- Bootstrap CSS -->
 	<link href="http://sosada.apesweb.net/css/bootstrap.css" rel="stylesheet">
 	<!-- Fontawesome -->
@@ -23,7 +23,7 @@
 	<div class="wrapper">
 		<!-- HEADER -->
 		<header class="container" id="header">
-			<img src="http://sosada.apesweb.net/img/logo.png" alt="logo" class="logo"> <a href="#">Joshua's Web Hosting</a>
+			<img src="http://sosada.apesweb.net/img/logo.png" alt="logo" class="logo"> <a href="#">Joshua Loves Code</a>
 		</header>
 		<!-- END HEADER -->
 
@@ -43,7 +43,7 @@
 			<!-- social buttons -->
 			<div class="social pull-right">
 				<ul class="list-group">
-          <li> class="hidden-xs">&copy;2017 Joshua Sing.</li>
+          <li class="hidden-xs">&copy;2017 Joshua Sing.</li>
 					<li class="hidden-xs">SOCIAL:</li>
 					<li><a href="//plus.google.com/u/0/104384702258312810362?prsrc=3"
    rel="publisher" target="_top" style="text-decoration:none;">
