--- a/404.html
+++ b/404.html
@@ -1,85 +1,10 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>404 | Joshua Loves Code</title>
-	<!-- Bootstrap CSS -->
-	<link href="http://sosada.apesweb.net/css/bootstrap.css" rel="stylesheet">
-	<!-- Fontawesome -->
-	<link href="http://sosada.apesweb.net/css/font-awesome.css" rel="stylesheet">
-	<!-- Style CSS -->
-	<link href="http://sosada.apesweb.net/style.css" rel="stylesheet">
-	<!-- Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700|Poppins:100,300,700" rel="stylesheet" type="text/css">
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
 </head>
 
 <body>
-	<div class="wrapper">
-		<!-- HEADER -->
-		<header class="container" id="header">
-			<img src="http://sosada.apesweb.net/img/logo.png" alt="logo" class="logo"> <a href="#">Joshua Loves Code</a>
-		</header>
-		<!-- END HEADER -->
-
-		<!-- MAIN -->
-		<main class="container">
-			<div class="row" id="main">
-				<!-- content -->
-				<div class="col-md-4" id="content">
-					<article>
-						<h1>OOPS! You did it Again...</h1>
-						<p>The page you were looking for doesn't exist. We think the page may have moved</p>
-						<a href="/" class="btn" role="button">Go Home</a>
-					</article>
-				</div> 
-				<!-- end content -->
-
-				<!-- glitch laptop for lg, md, sm sizes -->
-				<div class="col-md-8 laptop hidden-xs">
-					<img src="http://sosada.apesweb.net/img/laptop.png" alt="laptop">
-   					<div class="glitch">404</div>
-				</div>
-				<!-- end glitch laptop -->
-
-				<!-- non animated laptop for xs size -->
-				<div class="laptop visible-xs">
-					<img src="http://sosada.apesweb.net/img/laptop-xs.png" alt="laptop xs">
-				</div>
-				<!-- end non animated laptop -->
-			</div>
-		</main>
-		<!-- END MAIN -->
-	</div>
-
-	<!-- FOOTER -->
-	<footer class="container">
-		<div class="row" id="footer">
-
-			<!-- social buttons -->
-			<div class="social pull-right">
-				<ul class="list-group">
-					<li class="hidden-xs">SOCIAL:</li>
-					<li><a href="//plus.google.com/u/0/104384702258312810362?prsrc=3"
-   rel="publisher" target="_top" style="text-decoration:none;">
-<img src="//ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/>
-</a></li>
-					<li><a href="#"></a></li>
-				</ul>
-			</div>
-			<!-- end social buttons -->
-		</div>
-	</footer>
-	<!-- END FOOTER -->
-
-	<!-- jQuery js -->
-	<script src="https://sosada.apesweb.net/js/jquery.min.js"></script>
-	<!-- bootstrap js -->
-	<script src="https://sosada.apesweb.net/js/bootstrap.min.js"></script>
+	<h1>404 Page Not Found!</h1>
 </body>
 </html>
