--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="thesings.jpg" alt="Architecture" width="1500" height="800">
+  <img class="w3-image" src="thesings.jpg" alt="The Sings" width="1500" height="800" title="The Sings">
 </header>
 	
 </body>
