--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-	<title>The Sings</title>
+	<title>Home | Joshua Loves Code</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,23 +9,6 @@
 	
 </head>
 <body>
-	<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card-2">
-    <a href="#home" class="w3-bar-item w3-button">The <b>Sings</b></a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="#projects" class="w3-bar-item w3-button">Projects</a>
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-    </div>
-  </div>
-</div>
-
-<!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="thesings.jpg" alt="The Sings" width="1500" height="800" title="The Sings">
-</header>
-	
+	<h1>Comming Soon :)</h1>
 </body>
 </html>
